--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test:unit": "vitest --environment jsdom --root src/"
+    "test:unit": "vitest --environment jsdom --root src/",
+    "commit":"func() { git add . && git commit -m \"BUILD - $1\"; }; func"
   },
   "dependencies": {
     "pinia": "^2.0.28",
